--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="https://reactjs.org/favicon.ico" />
   <meta name="theme-color" content="#1e96d7">
-  <title>echart-widget</title>
+  <title>React & Web Components</title>
 </head>
 <body>
 
