--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="icon" href="https://reactjs.org/favicon.ico" />
-  <meta name="theme-color" content="#1e96d7">
-  <title>React & Web Components</title>
-</head>
-<body>
+<html lang="en" data-theme="light">
 
-  <div id="app"></div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/react-webcomponents/assets/favicon.17e50649.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>React + WebComponents</title>
+  <script type="module" crossorigin src="/react-webcomponents/assets/index.323c7282.js"></script>
+  <link rel="stylesheet" href="/react-webcomponents/assets/index.37dede16.css">
+</head>
+
+<body>
+  <div id="root"></div>
   
-<script type="text/javascript" src="main.js"></script></body>
+</body>
+
 </html>
